--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,131 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html{
+
+html {
     /* font-size: 62.5%; */
-     /* 10px/16px=0.625=62.5 */
-    font-size: 10px; 
+    /* 10px/16px=0.625=62.5 */
+    font-size: 10px;
 }
-body{
+
+body {
     font-family: 'Poppins';
 }
-p{
+
+/* p{
     font-size: 1rem;
-}
-a{
+} */
+a {
     text-decoration: none;
 }
-img{
+
+img {
     max-width: 100%;
     display: block;
 }
-.container{
+
+.container {
     margin: 0 auto;
     width: 137rem;
     /* background-color: grey;
     height: 600px; */
+    /* padding-top: 5.1rem; */
 }
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-1 {
+    width: 8.33%;
+}
+
+.col-2 {
+    width: 16.33%;
+}
+
+.col-3 {
+    width: 25%;
+}
+
+.col-4 {
+    width: 33.33%;
+}
+
+.col-5 {
+    width: 41.66%;
+}
+
+.col-6 {
+    width: 50%;
+}
+
+.col-7 {
+    width: 58.33%;
+}
+
+.col-8 {
+    width: 66.66%;
+}
+
+.col-9 {
+    width: 75%;
+}
+
+.col-10 {
+    width: 83.33%;
+}
+
+.col-11 {
+    width: 91.66%;
+}
+
+.col-12 {
+    width: 100%;
+}
+
+/* ************header***************** */
+header {
+    background-color: grey;
+    padding-top: 5.1rem;
+}
+
+header .container {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding-top: 5.1rem; */
+}
+
+header nav ul {
+    list-style-type: none;
+}
+
+header nav ul li {
+    display: inline-block;
+   
+}
+
+header nav ul li a {
+    color: #fff;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 0 3.3rem;
+}
+header nav{
+   margin-left: auto;
+}
+header .sreach i{
+    color: #fff;
+    font-size: 1.8rem;
+    padding-left: 3.3rem;
+}
+
+
+
+
+/* ************************************ */
