--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,8 +89,13 @@ img {
 
 /* ************header***************** */
 header {
-    background-color: grey;
-    padding-top: 5.1rem;
+    /* background-color: grey; */
+    padding:2rem;
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    transition: all 0.5s;
 }
 
 header .container {
@@ -98,7 +103,7 @@ header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* padding-top: 5.1rem; */
+    padding-top:  0 2rem;
 }
 
 header nav ul {
@@ -124,8 +129,21 @@ header .sreach i{
     font-size: 1.8rem;
     padding-left: 3.3rem;
 }
-
-
-
+.dark-header{
+    background-color: #000;
+}
 
 /* ************************************ */
+
+/* ********hero******************* */
+
+#hero{
+    background: url(../imges/lone-tree.jpg);
+    width: 100%;
+    height: 100vh;
+    background-position: center center;
+    background-size: cover;
+}
+
+
+/* ********************************** */
