--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,12 +90,13 @@ img {
 /* ************header***************** */
 header {
     /* background-color: grey; */
-    padding:2rem;
+    padding: 2rem;
     top: 0;
     left: 0;
     position: fixed;
     width: 100%;
     transition: all 0.5s;
+    z-index: 9;
 }
 
 header .container {
@@ -103,7 +104,7 @@ header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top:  0 2rem;
+    padding-top: 0 2rem;
 }
 
 header nav ul {
@@ -112,7 +113,7 @@ header nav ul {
 
 header nav ul li {
     display: inline-block;
-   
+
 }
 
 header nav ul li a {
@@ -121,15 +122,18 @@ header nav ul li a {
     font-size: 18px;
     padding: 0 3.3rem;
 }
-header nav{
-   margin-left: auto;
+
+header nav {
+    margin-left: auto;
 }
-header .sreach i{
+
+header .sreach i {
     color: #fff;
     font-size: 1.8rem;
     padding-left: 3.3rem;
 }
-.dark-header{
+
+.dark-header {
     background-color: #000;
 }
 
@@ -137,13 +141,109 @@ header .sreach i{
 
 /* ********hero******************* */
 
-#hero{
+#hero {
     background: url(../imges/lone-tree.jpg);
     width: 100%;
     height: 100vh;
     background-position: center center;
     background-size: cover;
+    position: relative;
 }
+
+#hero::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0 0 0 /0.5);
+}
+
+.hero-data {
+    position: absolute;
+    top: 30%;
+}
+
+.hero-data h1 {
+    font-weight: 700;
+    font-size: 70px;
+    line-height: 110px;
+    color: #FFFFFF;
+
+}
+
+.hero-data p {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 36px;
+    color: #CFCFCF;
+    margin-bottom: 3rem;
+}
+
+.hero-data span {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 36px;
+    color: #ECECEC;
+
+}
+
+#hero .search-data {
+    width: 73.6rem;
+    height: 7.8rem;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 7.2rem;
+    display: flex;
+    background-color: #fff;
+    padding: 1rem 1rem 1rem 2.3rem;
+    margin-bottom: 3rem;
+
+}
+
+#hero .search-data select {
+    border: none;
+    font-size: 1.8rem;
+
+}
+
+#hero .search-data .explore-btn {
+    background-color: #000;
+    color: #fff;
+    font-weight: 600;
+    font-size: 18px;
+    /* line-height: 36px; */
+    color: #FFFFFF;
+    border-radius: 7.2rem;
+    padding: 1.8rem 3rem;
+
+}
+
+/* ********************************** */
+
+/* *************explore********************** */
+
+#explore {
+    margin: 17.8rem 0;
+}
+
+.main-title h2 {
+    font-weight: 600;
+    font-size: 60px;
+    line-height: 70px;
+    text-align: center;
+    color: #020202;
+    margin-bottom: 3rem;
+}
+
+.main-title p {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 36px;
+    text-align: center;
+    color: #878787;
+}
+
+
+
 
 
 /* ********************************** */
